--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "author": "",
     "devDependencies": {
         "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.14",
         "@types/node": "^20.11.16",
+        "jest": "^29.7.0",
         "nodemon": "^3.0.3",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.3"
